syntax = "proto3";
package poc.poc;

option go_package = "poc/x/poc/types";

message DevRegistry {
  string index = 1; 
  string apps = 2; 
  
}

